chore(spin): update PowerMock dependency to version 2.0.2
Related to CAM-9309