@@ -11,7 +11,7 @@
   <name>camunda Spin - core</name>
 
   <properties>
-    <powermock.version>1.5.6</powermock.version>
+    <powermock.version>2.0.2</powermock.version>
   </properties>
 
   <dependencies>
@@ -76,10 +76,10 @@
     </dependency>
     <dependency>
       <groupId>org.powermock</groupId>
-      <artifactId>powermock-api-mockito</artifactId>
+      <artifactId>powermock-api-mockito2</artifactId>
       <version>${powermock.version}</version>
       <scope>test</scope>
-    </dependency>
+   </dependency>
 
   </dependencies>
 
@@ -98,27 +98,6 @@
               <argLine>-XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
               <excludes>
                 <exclude>**/javascript/**</exclude>
-              </excludes>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <!-- exclude the DataFormatProviderTest until PowerMock 2.0 is released: https://app.camunda.com/jira/browse/CAM-9309 -->
-    <profile>
-      <id>jdk-9-and-onwards</id>
-      <activation>
-        <jdk>[9,)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>-XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
-              <excludes>
-                <exclude>**/DataFormatProviderTest.java</exclude>
               </excludes>
             </configuration>
           </plugin>
